src/ui/snapshots/mult__ui__tests__snapshot_confirm_delete_prompt.snap
---
source: src/ui.rs
expression: "draw_grid(&app, &PtyRuntime::new_offline(), 100, 12)"
---
symbols:
| ▣ orbit                    main Terminal is stopped. Type to start it and send input.             |
|   · agent: pi                                                                                      |
|   $ terminal                                                                                       |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|Delete terminal "shell" in workspace "orbit"?                                                       |
|y/enter deletes • esc/n/ctrl-c cancels                                                              |
|                                                                                                    |

backgrounds (. nc  : base  # highlight  * selection  @ cursor  r reset):
|....................................................................................................|
|....................................................................................................|
|##################################..................................................................|
|....................................................................................................|
|....................................................................................................|
|....................................................................................................|
|....................................................................................................|
|....................................................................................................|
|....................................................................................................|
|::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
