src/ui/snapshots/mult__ui__tests__snapshot_help_overlay.snap
---
source: src/ui.rs
expression: "buffer_snapshot(&render_buffer(&app, &PtyRuntime::new_offline(),\n&config::Config::default(), 100, 40,))"
---
size: 100x40

symbols:
| ▣ mult                           Terminal is stopped. Type to start it and send input.             |
|   $ terminal                                                                                       |
|      ┌──────────────────────────────────────────────────────────────────────────────────────┐      |
| ▣ web│Keybindings                                                                           │      |
|   $ t│                                                                                      │      |
|      │Global                                                                                │      |
|      │? or F1                    Show keybindings                                           │      |
|      │Ctrl+s                     Search selected pane                                       │      |
|      │Ctrl+a                     New pi agent chat                                          │      |
|      │Ctrl+x                     New Claude Code chat                                       │      |
|      │Ctrl+t                     New shell terminal                                         │      |
|      │Ctrl+f                     Open workspace                                             │      |
|      │Ctrl+q                     Delete selected item                                       │      |
|      │Ctrl+n                     Dismiss notices                                            │      |
|      │Ctrl+Esc                   Quit mult                                                  │      |
|      │Ctrl+j or Ctrl+Enter       Select next sidebar item                                   │      |
|      │Ctrl+k                     Select previous sidebar item                               │      |
|      │Ctrl+p                     Open the command palette                                   │      |
|      │any other key              start the selected chat/terminal PTY and send the key to it│      |
|      │                                                                                      │      |
|      │Prompts and the command palette                                                       │      |
|      │Enter                      Submit                                                     │      |
|      │Esc or Ctrl+c              Cancel                                                     │      |
|      │Left/Right                 Move the cursor one character                              │      |
|      │Home/End or Ctrl+a/Ctrl+e  Move the cursor to the start/end                           │      |
|      │Backspace/Delete           Delete the character before/after the cursor               │      |
|      │Ctrl+w                     Delete the word before the cursor                          │      |
|      │Ctrl+u                     Delete everything before the cursor                        │      |
|      │Up/Down or Ctrl+k/Ctrl+j   Move through results (palette, project list)               │      |
|      │                                                                                      │      |
|      │Mouse                                                                                 │      |
|      │wheel                      Scroll the selected output pane                            │      |
|      │drag                       Select visible text and copy it with OSC 52                │      |
|      │Ctrl+Shift+C               Copy the active mult selection                             │      |
|      │                                                                                      │      |
|      │esc / ? / F1 closes • ctrl-p opens the command palette                                │      |
|      └──────────────────────────────────────────────────────────────────────────────────────┘      |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |

styles:
|abbccccaaaaaaaaaaaaaaaaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd|
|eeeffeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd|
|aaaaaaggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggdddddd|
|abbcccghhhhhhhhhhhdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaiiagddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagjjjjjjddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjdddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagjjjjjdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagkkkkkkkkkkkkkkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddgdddddd|
|aaaaaagggggggggggggggggggggggggggggggggggggggggggggggggggggggddddddddddddddddddddddddddddddddgdddddd|
|aaaaaaggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggdddddd|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd|

legend:
  a = Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(31, 29, 48)).underline_color(Color::Reset)
  b = Style::new().fg(Color::Rgb(156, 207, 216)).bg(Color::Rgb(31, 29, 48)).underline_color(Color::Reset)
  c = Style::new().fg(Color::Rgb(156, 207, 216)).bg(Color::Rgb(31, 29, 48)).underline_color(Color::Reset).bold()
  d = Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(35, 33, 54)).underline_color(Color::Reset)
  e = Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(68, 65, 90)).underline_color(Color::Reset).bold()
  f = Style::new().fg(Color::Rgb(110, 106, 134)).bg(Color::Rgb(68, 65, 90)).underline_color(Color::Reset).bold()
  g = Style::new().fg(Color::Rgb(110, 106, 134)).bg(Color::Rgb(35, 33, 54)).underline_color(Color::Reset)
  h = Style::new().fg(Color::Rgb(156, 207, 216)).bg(Color::Rgb(35, 33, 54)).underline_color(Color::Reset).bold()
  i = Style::new().fg(Color::Rgb(110, 106, 134)).bg(Color::Rgb(31, 29, 48)).underline_color(Color::Reset)
  j = Style::new().fg(Color::Rgb(196, 167, 231)).bg(Color::Rgb(35, 33, 54)).underline_color(Color::Reset)
  k = Style::new().fg(Color::Rgb(246, 193, 119)).bg(Color::Rgb(35, 33, 54)).underline_color(Color::Reset)
