src/ui/snapshots/mult__ui__tests__snapshot_narrow_terminal_80x24.snap
---
source: src/ui.rs
expression: "draw_grid(&app, &PtyRuntime::new_offline(), 80, 24)"
---
symbols:
| ▣ orbit                    main Terminal is stopped. Type to start it and send|
|   · agent: pi                                                                  |
|   $ terminal                                                                   |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |

backgrounds (. nc  : base  # highlight  * selection  @ cursor  r reset):
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|##################################::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::|
