src/ui/snapshots/mult__ui__tests__snapshot_no_color_frame.snap
---
source: src/ui/mod.rs
expression: "test_support::monochrome_grid(&no_color_frame(100, 10))"
---
symbols:
| ▣ orbit                    main selected text                                                     |
|   · agent: pi                    second line                                                       |
|   $ terminal                                                                                       |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |

attributes (R reversed  B bold  D dim  U underlined  - none):
|---BBBBB--------------------------RRRRRRRR----------------------------------------------------------|
|----------------------------------R-----------------------------------------------------------------|
|RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
|----------------------------------------------------------------------------------------------------|
